--- a/fedora_base/templates/zshrc.j2
+++ b/fedora_base/templates/zshrc.j2
@@ -1,4 +1,4 @@
-"# This file is managed by the Ansible role: {{ ansible_role_name }}"
+# This file is managed by the Ansible role: {{ ansible_role_name }}
 
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
